--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,15 +30,18 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "structlog>=24.1.0",
     "prometheus-client>=0.19.0",
-    "numpy>=1.26.0",
-    "sqlite-vss>=0.1.2",
-    "sentence-transformers>=2.3.0",
     "python-json-logger>=2.0.7",
     "pyyaml>=6.0.1",
     "tenacity>=8.2.0",
 ]
 
 [project.optional-dependencies]
+# Memory features require heavy dependencies
+memory = [
+    "numpy>=1.26.0",
+    "sqlite-vss>=0.1.2",
+    "sentence-transformers>=2.3.0",
+]
 dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.23.0",
